fix extra space below some pages

--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,7 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
-body {
-  padding-bottom: 300px;
-}
+
 a {
   text-decoration: none;
 }
@@ -50,12 +48,6 @@ a {
   background-color: rgb(33, 33, 33);
   color: rgb(224, 224, 224);
   gap: 1rem;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  max-height: 300px;
 }
 
 .footer-top {
